@startuml

class Carrier {
    CarrierId
    WorkingTimeslot
    WorkingArea
    MaxWeight
    MaxVolume
    MaxPacketWeight
    Speed
    Cost
}
class CarrierId {
    id String
}
class WorkingArea {
    Coordinates
    Radius Distance
}

class WorkingTimeslot {
    Start
    End
}

Carrier --o CarrierId
Carrier --o WorkingArea
Carrier --o WorkingTimeslot

@enduml

